--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -6,6 +6,8 @@
   "homepage": "https://github.com/hazelcast/frontend-shared#readme",
   "license": "Apache-2.0",
   "main": "lib/index.js",
+  "module": "lib/index.js",
+  "sideEffects": false,
   "directories": {
     "lib": "lib",
     "test": "__tests__"
