--- a/package.json
+++ b/package.json
@@ -2,33 +2,34 @@
   "name": "root",
   "private": true,
   "devDependencies": {
-    "@types/jest": "^26.0.14",
-    "@typescript-eslint/eslint-plugin": "^4.4.0",
-    "@typescript-eslint/parser": "^4.4.0",
-    "chromatic": "^5.2.0",
-    "css-loader": "^4.3.0",
-    "doctoc": "^1.4.0",
-    "eslint": "^7.11.0",
-    "eslint-config-prettier": "^6.12.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.21.4",
-    "eslint-plugin-react-hooks": "^4.1.2",
-    "husky": "^4.3.0",
+    "@storybook/source-loader": "^6.4.9",
+    "@types/jest": "^27.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.7.0",
+    "@typescript-eslint/parser": "^5.7.0",
+    "chromatic": "^6.2.3",
+    "css-loader": "^6.5.1",
+    "doctoc": "^2.1.0",
+    "eslint": "^8.5.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "husky": "^7.0.4",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.5.2",
+    "jest": "^27.4.5",
     "lerna": "^4.0.0",
     "lerna-update-wizard": "^1.1.0",
-    "link-parent-bin": "^1.0.2",
-    "lint-staged": "^10.4.0",
-    "patch-package": "^6.2.2",
-    "prettier": "^2.1.2",
-    "regenerator-runtime": "^0.13.7",
-    "sass": "^1.35.1",
-    "sass-loader": "^10.1.0",
-    "shx": "^0.3.2",
-    "style-loader": "^2.0.0",
-    "ts-jest": "^26.4.1",
-    "typescript": "^4.0.3"
+    "link-parent-bin": "^2.0.0",
+    "lint-staged": "^12.1.3",
+    "patch-package": "^6.4.7",
+    "prettier": "^2.5.1",
+    "regenerator-runtime": "^0.13.9",
+    "sass": "^1.45.0",
+    "sass-loader": "^12.4.0",
+    "shx": "^0.3.3",
+    "style-loader": "^3.3.1",
+    "ts-jest": "^27.1.2",
+    "typescript": "^4.5.4"
   },
   "scripts": {
     "link-parent-bin": "link-parent-bin",
