--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -45,47 +45,47 @@
     "url": "https://github.com/hazelcast/frontend-shared/issues"
   },
   "dependencies": {
-    "@codemirror/basic-setup": "0.19.0",
-    "@codemirror/stream-parser": "0.19.2",
-    "@codemirror/view": "0.19.9",
-    "@hazelcast/helpers": "1.0.1-next.46",
+    "@codemirror/basic-setup": "^0.19.1",
+    "@codemirror/stream-parser": "^0.19.3",
+    "@codemirror/view": "^0.19.35",
+    "@hazelcast/helpers": "^1.2.0",
     "@hazelcast/services": "^1.2.0",
     "@headlessui/react": "^1.4.2",
-    "@icons-pack/react-simple-icons": "^3.13.0",
+    "@icons-pack/react-simple-icons": "^4.6.1",
     "@popperjs/core": "^2.11.0",
-    "@types/react-modal": "3.12.1",
+    "@types/react-modal": "^3.13.1",
     "@types/react-select": "3.0.26",
-    "@types/react-table": "^7.0.28",
+    "@types/react-table": "^7.7.9",
     "classnames": "^2.3.1",
-    "date-fns": "^2.16.1",
+    "date-fns": "^2.27.0",
     "dequal": "^2.0.2",
-    "focus-trap-react": "^8.8.2",
-    "formik": "^2.2.0",
-    "rc-tooltip": "^4.2.3",
-    "react-datepicker": "^3.4.1",
-    "react-feather": "^2.0.8",
+    "focus-trap-react": "^8.9.0",
+    "formik": "^2.2.9",
+    "rc-tooltip": "^5.1.1",
+    "react-datepicker": "^4.5.0",
+    "react-feather": "^2.0.9",
     "react-merge-refs": "^1.1.0",
-    "react-modal": "^3.12.1",
+    "react-modal": "^3.14.4",
     "react-popper": "^2.2.3",
-    "react-resize-aware": "^3.1.0",
+    "react-resize-aware": "^3.1.1",
     "react-select": "^4.1.0",
-    "react-table": "^7.6.3",
+    "react-table": "^7.7.0",
     "react-uid": "^2.3.1",
-    "react-use": "^15.3.4",
+    "react-use": "^17.3.1",
     "use-deep-compare": "^1.1.0"
   },
   "devDependencies": {
     "@codemirror/legacy-modes": "0.19.0",
     "@hazelcast/test-helpers": "^1.2.0",
-    "@storybook/addon-docs": "^6.4.0",
-    "@storybook/addons": "^6.4.0",
-    "@storybook/builder-webpack5": "^6.4.0",
-    "@storybook/manager-webpack5": "^6.4.0",
+    "@storybook/addon-docs": "^6.4.9",
+    "@storybook/addons": "^6.4.9",
+    "@storybook/builder-webpack5": "^6.4.9",
+    "@storybook/manager-webpack5": "^6.4.9",
     "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "^6.4.0",
-    "@storybook/theming": "^6.4.0",
+    "@storybook/react": "^6.4.9",
+    "@storybook/theming": "^6.4.9",
     "@types/classnames": "^2.3.1",
-    "@types/enzyme": "^3.10.8",
+    "@types/enzyme": "^3.10.10",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/react": "^16.14.4",
     "@types/react-datepicker": "^4.3.2",
@@ -94,19 +94,19 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "loki": "^0.28.1",
-    "postcss": "^8.1.1",
-    "postcss-cli": "^8.1.0",
-    "postcss-reporter": "^7.0.1",
-    "postcss-scss": "^3.0.5",
+    "postcss": "^8.4.5",
+    "postcss-cli": "^9.1.0",
+    "postcss-reporter": "^7.0.4",
+    "postcss-scss": "^4.0.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "storybook-addon-designs": "^6.2.0",
-    "stylelint": "^13.7.2",
-    "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-standard": "^20.0.0",
-    "stylelint-scss": "^3.19.0",
-    "webpack": "^5.64.4",
-    "yup": "^0.32.9"
+    "stylelint": "^14.1.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-standard": "^24.0.0",
+    "stylelint-scss": "^4.0.1",
+    "webpack": "^5.65.0",
+    "yup": "^0.32.11"
   },
   "peerDependencies": {
     "react": "^16.14.0 || ^17.0.0",
