--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -109,6 +109,7 @@
     "stylelint-config-standard": "^24.0.0",
     "stylelint-config-standard-scss": "^3.0.0",
     "stylelint-scss": "^4.0.1",
+    "stylelint-prettier": "^2.0.0",
     "webpack": "^5.65.0",
     "yup": "^0.32.11"
   },
