--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -25,6 +25,7 @@ jobs:
       - run: npm ci && npm run verify-all
 
   chromatic-deployment:
+    runs-on: ubuntu-latest
     needs: [build_check]
     steps:
       - name: Checkout repository
