--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -48,6 +48,8 @@ jobs:
             ${{ runner.os }}-build-
             ${{ runner.os }}-
 
+      - run: npm ci
+
       - name: Publish to Chromatic
         uses: chromaui/action@v1
         with:
