--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "husky": "^7.0.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "lerna": "^5.6.2",
     "lerna-update-wizard": "^1.1.0",
     "link-parent-bin": "^2.0.0",
