--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
-    "lerna": "^5.6.2",
+    "lerna": "^6.6.1",
     "lerna-update-wizard": "^1.1.0",
     "link-parent-bin": "^2.0.0",
     "lint-staged": "^12.1.3",
@@ -41,7 +41,7 @@
     "patch-package": "patch-package",
     "compile": "lerna run compile",
     "postinstall": "npm run patch-package && lerna bootstrap --hoist && npm run link-parent-bin && npm run compile",
-    "test": "lerna run --scope=@hazelcast/ui test",
+    "test": "lerna run test",
     "test:visual": "lerna run --parallel test:visual",
     "lint": "lerna run --parallel lint",
     "verify-all": "npm run lint && npm run test && npm run build-storybook && npm run test:visual",
