--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -54,7 +54,7 @@ jobs:
           workingDir: packages/ui
           autoAcceptChanges: true
 
-  publish_next:
+  publish_canary:
     if: github.event.pull_request.merged == true && !startsWith(github.head_ref, 'release/v')
     runs-on: ubuntu-latest
     needs: [test, test_visual]
@@ -66,15 +66,8 @@ jobs:
       - run: echo //registry.npmjs.org/:_authToken=${NPM_TOKEN} > .npmrc
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-      - name: create and publish versions
-        uses: changesets/action@master
-        with:
-          version: pnpm ci:next
-          commit: 'chore: update versions'
-          title: 'chore: update versions'
-          publish: pnpm ci:publish
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Publish to npm
+        run: pnpm run publish-canary
 
   publish_release:
     # this job will only run if the PR has been merged
