--- a/package.json
+++ b/package.json
@@ -1,24 +1,32 @@
 {
   "name": "root",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "devDependencies": {
-    "@changesets/cli": "^2.26.0",
-    "@storybook/source-loader": "^6.5.16",
-    "@types/jest": "^29.4.0",
-    "@typescript-eslint/eslint-plugin": "^5.54.0",
-    "@typescript-eslint/parser": "^5.54.0",
-    "chromatic": "^6.17.1",
-    "css-loader": "^6.7.3",
-    "doctoc": "^2.2.1",
-    "eslint": "^8.35.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^8.0.3",
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.4",
+    "@storybook/source-loader": "^6.4.9",
+    "@types/jest": "^29.5.1",
+    "@typescript-eslint/eslint-plugin": "^5.7.0",
+    "@typescript-eslint/parser": "^5.7.0",
+    "babel-jest": "^29.5.0",
+    "chromatic": "^6.2.3",
+    "css-loader": "^6.5.1",
+    "doctoc": "^2.1.0",
+    "eslint": "^8.5.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "husky": "^7.0.4",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.4.3",
-    "jest-environment-jsdom": "^29.4.3",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "lerna": "^6.6.1",
     "lint-staged": "^13.1.2",
     "patch-package": "^6.5.1",
     "prettier": "^2.8.4",
@@ -42,11 +50,7 @@
     "start": "pnpm run --filter @hazelcast/ui storybook",
     "prepack": "pnpm run compile",
     "prepare": "husky install",
-    "ci:version:next": "pnpm changeset version --snapshot next",
-    "ci:publish": "pnpm publish -r",
-    "ci:changeset": "pnpm changeset add && git add .changeset && git commit -m '📝 Changeset'",
-    "ci:release": "pnpm changeset version && git add packages .changeset && git commit -m '🚚 Release packages' && pnpm changeset tag",
-    "ci:next": "pnpm changeset pre enter next && pnpm run release && pnpm changeset pre exit"
+    "publish-canary": "lerna publish --canary --preid next --dist-tag next --yes --no-verify-access --include-merged-tags"
   },
   "pnpm": {
     "overrides": {
@@ -61,7 +65,23 @@
       "log4js@<6.4.0": ">=6.4.0",
       "trim@<0.0.3": ">=0.0.3",
       "ansi-regex@>=3.0.0 <3.0.1": ">=3.0.1",
-      "trim-newlines@<3.0.1": ">=3.0.1"
+      "trim-newlines@<3.0.1": ">=3.0.1",
+      "qs@>=6.9.0 <6.9.7": ">=6.9.7",
+      "qs@>=6.10.0 <6.10.3": ">=6.10.3",
+      "@sideway/formula@<3.0.1": ">=3.0.1",
+      "json5@<1.0.2": ">=1.0.2",
+      "minimist@>=1.0.0 <1.2.6": ">=1.2.6",
+      "loader-utils@<1.4.1": ">=1.4.1",
+      "loader-utils@>=2.0.0 <2.0.3": ">=2.0.3",
+      "loader-utils@>=2.0.0 <2.0.4": ">=2.0.4",
+      "loader-utils@>=1.0.0 <1.4.2": ">=1.4.2",
+      "webpack@>=5.0.0 <5.76.0": ">=5.76.0",
+      "shell-quote@<=1.7.2": ">=1.7.3",
+      "decode-uri-component@<0.2.1": ">=0.2.1",
+      "terser@>=5.0.0 <5.14.2": ">=5.14.2",
+      "terser@<4.8.1": ">=4.8.1",
+      "yaml@>=2.0.0-5 <2.2.2": ">=2.2.2",
+      "xml2js@<0.5.0": ">=0.5.0"
     }
   }
 }
