--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -36,10 +36,10 @@
     "url": "https://github.com/hazelcast/frontend-shared/issues"
   },
   "peerDependencies": {
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "@types/react": "^17 || ^18",
+    "@types/react-dom": "^17 || ^18",
+    "react": "^17 || ^18",
+    "react-dom": "^17 || ^18"
   },
   "devDependencies": {
     "@storybook/addons": "^6.5.5",
