--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -111,5 +111,11 @@
     "stylelint-scss": "^4.0.1",
     "webpack": "^5.65.0",
     "yup": "^0.32.11"
+  },
+  "peerDependencies": {
+    "@types/react": "^17 || ^18",
+    "@types/react-dom": "^17 || ^18",
+    "react": "^17 || ^18",
+    "react-dom": "^17 || ^18"
   }
 }
