--- a/package.json
+++ b/package.json
@@ -54,19 +54,7 @@
   },
   "pnpm": {
     "overrides": {
-      "glob-parent@<5.1.2": ">=5.1.2",
-      "minimist@<1.2.6": ">=1.2.6",
-      "nanoid@>=3.0.0 <3.1.31": ">=3.1.31",
-      "follow-redirects@<1.14.8": ">=1.14.8",
       "shelljs@<0.8.5": ">=0.8.5",
-      "follow-redirects@<1.14.7": ">=1.14.7",
-      "path-parse@<1.0.7": ">=1.0.7",
-      "ini@<1.3.6": ">=1.3.6",
-      "log4js@<6.4.0": ">=6.4.0",
-      "trim@<0.0.3": ">=0.0.3",
-      "ansi-regex@>=3.0.0 <3.0.1": ">=3.0.1",
-      "trim-newlines@<3.0.1": ">=3.0.1",
-      "qs@>=6.9.0 <6.9.7": ">=6.9.7",
       "qs@>=6.10.0 <6.10.3": ">=6.10.3",
       "@sideway/formula@<3.0.1": ">=3.0.1",
       "json5@<1.0.2": ">=1.0.2",
@@ -75,13 +63,13 @@
       "loader-utils@>=2.0.0 <2.0.3": ">=2.0.3",
       "loader-utils@>=2.0.0 <2.0.4": ">=2.0.4",
       "loader-utils@>=1.0.0 <1.4.2": ">=1.4.2",
-      "webpack@>=5.0.0 <5.76.0": ">=5.76.0",
+      "ini@<1.3.6": ">=1.3.6",
+      "trim-newlines@<3.0.1": ">=3.0.1",
       "shell-quote@<=1.7.2": ">=1.7.3",
       "decode-uri-component@<0.2.1": ">=0.2.1",
       "terser@>=5.0.0 <5.14.2": ">=5.14.2",
       "terser@<4.8.1": ">=4.8.1",
-      "yaml@>=2.0.0-5 <2.2.2": ">=2.2.2",
-      "xml2js@<0.5.0": ">=0.5.0"
+      "yaml@>=2.0.0-5 <2.2.2": ">=2.2.2"
     }
   }
 }
