--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -20,26 +20,10 @@ jobs:
         env:
           NODE_OPTIONS: --max-old-space-size=8192
 
-  test_visual:
-    if: github.event.pull_request.merged == true
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/actions/install
-      - run: pnpm run build-storybook
-      - run: pnpm run test:visual
-
-      - name: Archive screenshots
-        if: ${{ failure() }}
-        uses: actions/upload-artifact@v1
-        with:
-          name: loki-screenshots
-          path: packages/ui/.loki
-
   chromatic-deployment:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
-    needs: [test, test_visual]
+    needs: [test]
     steps:
       - uses: actions/checkout@v2
         with:
@@ -57,7 +41,7 @@ jobs:
   publish_canary:
     if: github.event.pull_request.merged == true && !startsWith(github.head_ref, 'release/v')
     runs-on: ubuntu-latest
-    needs: [test, test_visual]
+    needs: [test]
     steps:
       - uses: actions/checkout@v3
         with:
