--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -20,10 +20,25 @@ jobs:
         env:
           NODE_OPTIONS: --max-old-space-size=8192
 
+  build:
+    if: github.event.pull_request.merged == true
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/actions/install
+      - run: pnpm run build-storybook
+
+      - name: Archive screenshots
+        if: ${{ failure() }}
+        uses: actions/upload-artifact@v1
+        with:
+          name: loki-screenshots
+          path: packages/ui/.loki
+
   chromatic-deployment:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
-    needs: [test]
+    needs: [test, build]
     steps:
       - uses: actions/checkout@v2
         with:
@@ -41,7 +56,7 @@ jobs:
   publish_canary:
     if: github.event.pull_request.merged == true && !startsWith(github.head_ref, 'release/v')
     runs-on: ubuntu-latest
-    needs: [test]
+    needs: [test, build]
     steps:
       - uses: actions/checkout@v3
         with:
