--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -20,6 +20,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/install
+      - run: export NODE_OPTIONS=--openssl-legacy-provider
       - run: pnpm run build-storybook
       - run: pnpm run test:visual
 
