--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/install
       - run: pnpm run build-storybook
-      - run: pnpm run test:visual
+      - run: export NODE_OPTIONS=--openssl-legacy-provider && pnpm run test:visual
 
       - name: Archive screenshots
         if: ${{ failure() }}
