--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -21,10 +21,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/install
       - run: pnpm run build-storybook
-      - run: docker version && docker info
-      - run: export DOCKER_DEFAULT_PLATFORM=linux/arm64
-      - run: docker pull yukinying/chrome-headless-browser-stable:latest
-      - run: export NODE_OPTIONS=--openssl-legacy-provider && pnpm run test:visual
+      - run: export DOCKER_DEFAULT_PLATFORM=linux/amd64 && export NODE_OPTIONS=--openssl-legacy-provider && pnpm run test:visual
 
       - name: Archive screenshots
         if: ${{ failure() }}
