--- a/package.json
+++ b/package.json
@@ -54,22 +54,24 @@
   },
   "pnpm": {
     "overrides": {
-      "shelljs@<0.8.5": ">=0.8.5",
-      "qs@>=6.10.0 <6.10.3": ">=6.10.3",
-      "@sideway/formula@<3.0.1": ">=3.0.1",
-      "json5@<1.0.2": ">=1.0.2",
-      "minimist@>=1.0.0 <1.2.6": ">=1.2.6",
-      "loader-utils@<1.4.1": ">=1.4.1",
-      "loader-utils@>=2.0.0 <2.0.3": ">=2.0.3",
-      "loader-utils@>=2.0.0 <2.0.4": ">=2.0.4",
-      "loader-utils@>=1.0.0 <1.4.2": ">=1.4.2",
-      "ini@<1.3.6": ">=1.3.6",
+      "trim@<0.0.3": ">=0.0.3",
+      "xml2js@<0.5.0": ">=0.5.0",
+      "browserify-sign@>=2.6.0 <=4.2.1": ">=4.2.2",
+      "postcss@<8.4.31": ">=8.4.31",
+      "react-devtools-core@<4.28.4": ">=4.28.4",
+      "glob-parent@<5.1.2": ">=5.1.2",
+      "word-wrap@<1.2.4": ">=1.2.4",
       "trim-newlines@<3.0.1": ">=3.0.1",
-      "shell-quote@<=1.7.2": ">=1.7.3",
-      "decode-uri-component@<0.2.1": ">=0.2.1",
-      "terser@>=5.0.0 <5.14.2": ">=5.14.2",
-      "terser@<4.8.1": ">=4.8.1",
-      "yaml@>=2.0.0-5 <2.2.2": ">=2.2.2"
+      "tough-cookie@<4.1.3": ">=4.1.3",
+      "@babel/traverse@<7.23.2": ">=7.23.2",
+      "follow-redirects@<1.15.4": ">=1.15.4",
+      "qs@>=6.9.0 <6.9.7": ">=6.9.7",
+      "semver@>=7.0.0 <7.5.2": ">=7.5.2",
+      "semver@<5.7.2": ">=5.7.2",
+      "semver@>=6.0.0 <6.3.1": ">=6.3.1",
+      "axios@>=0.8.1 <0.28.0": ">=0.28.0",
+      "axios@>=1.0.0 <1.6.0": ">=1.6.0",
+      "ip@=2.0.0": ">=2.0.1"
     }
   }
 }
