--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -51,6 +51,10 @@
     "@headlessui/react": "^1.4.2",
     "@icons-pack/react-simple-icons": "^9.3.0",
     "@popperjs/core": "^2.11.7",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^12.1.5",
+    "@testing-library/user-event": "^14.5.2",
     "@types/react-modal": "3.16.0",
     "@types/react-table": "^7.7.14",
     "classnames": "^2.3.2",
@@ -71,7 +75,8 @@
     "react-table": "^7.8.0",
     "react-uid": "^2.3.2",
     "react-use": "^17.4.0",
-    "use-deep-compare": "^1.1.0"
+    "use-deep-compare": "^1.1.0",
+    "use-persisted-state": "^0.3.3"
   },
   "devDependencies": {
     "@hazelcast/test-helpers": "^1.3.2",
@@ -88,6 +93,7 @@
     "@types/react": "^17.0.45",
     "@types/react-datepicker": "^4.3.2",
     "@types/react-dom": "^17.0.17",
+    "@types/use-persisted-state": "^0.3.4",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.8.0",
     "babel-loader": "^9.1.2",
     "doiuse": "^4.4.1",
