--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -75,7 +75,7 @@
     "use-persisted-state": "^0.3.3"
   },
   "devDependencies": {
-    "@hazelcast/test-helpers": "^1.3.2",
+    "@hazelcast/test-helpers": "1.3.3-next.20",
     "@storybook/addon-docs": "^6.5.16",
     "@storybook/addons": "^6.5.16",
     "@storybook/builder-webpack5": "^6.5.16",
